--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,8 @@
       "@adonisjs/repl",
       "@adonisjs/lucid",
       "@adonisjs/auth"
-    ]
+    ],
+    "experimentalDecorators": true,
+    "allowJs": true
   }
 }
